# tess-stray-light

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE_TASK.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURATION_STATUS.md  IMPLEMENTATION_PLAN.md  LICENSE  LOCAL_COMPLETION_REPORT.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
config/: analysis.yml
data/: INPUT_SCHEMA.md  manifest.csv  provenance.yml
data/example/: demo.csv
data/raw/: README.md
docs/: ASSUMPTIONS_AND_LIMITATIONS.md  BENCHMARK_PLAN.md  DATASET_PLAN.md  ERROR_HANDLING.md  FIGURE_AND_UI_SPEC.md  LITERATURE_SEEDS.md  RESEARCH_BLUEPRINT.md  VALIDATION_CONTRACT.md
figures/: COVER_IMAGE_PROMPT.txt  fig01_raw_masked_lightcurve.json  fig02_quality_bit_timeline.json  fig03_scatter_comparison.json  fig04_bootstrap_rms.json
notebooks/: NOTEBOOK_PLAN.md
reports/: references.bib  report.tex
scripts/: fetch_data.py  make_figures.py  run_analysis.py  sync_web_assets.py
src/tess_scattered_light_quality_audit/: __init__.py  config.py  core.py  exceptions.py  lightcurve_metrics.py  logging_utils.py  mast_fetch.py  plotting.py  provenance.py  (+5 more)
src/tess_scattered_light_quality_audit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_config.py  test_core_pipeline.py  test_lightcurve_metrics.py  test_mast_fetch.py  test_provenance.py  test_quality_flags.py  test_results_io.py  test_starter_core.py  test_synthetic.py  test_uncertainty.py
web-react/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
(+11 files in other folders)
