[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tess-stray-light"
version = "0.1.0"
description = "Publication-grade computational science starter repository."
requires-python = ">=3.11,<3.13"
dependencies = [
  "numpy==1.26.4",
  "scipy==1.13.1",
  "pandas==2.2.2",
  "matplotlib==3.9.0",
  "pyyaml==6.0.1",
  "astropy==6.1.0",
  "astroquery==0.4.7",
  "lightkurve==2.5.0"
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
  "pytest-cov==5.0.0",
  "ruff==0.5.5",
  "mypy==1.10.1",
  "types-PyYAML",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["astropy.*", "astroquery.*", "lightkurve.*", "scipy.*"]
ignore_missing_imports = true
